// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Buying render 1`] = `
<div
  className="p-2 border p-3 rounded"
>
  <div
    className="flex justify-between items-center "
  >
    <h3
      className="mb-0"
    >
      Buy
       HIVE
    </h3>
    <div>
      <small
        className="flex cursor-pointer"
        onClick={[Function]}
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Available
          :
        </div>
        <div>
          dummy value
        </div>
      </small>
      <small
        className="flex"
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Lowest ask
          :
        </div>
        <div
          className="pointer"
          onClick={[Function]}
        >
          9.000
        </div>
      </small>
    </div>
  </div>
  <hr />
  <form
    className="block "
    onSubmit={[Function]}
  >
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Price
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value="6.900000"
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HBD/HIVE
        </div>
      </div>
    </div>
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Amount
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value={0}
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HIVE
        </div>
      </div>
    </div>
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Total
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value={0}
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HBD
        </div>
      </div>
    </div>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 block"
      disabled={true}
      style={
        Object {
          "outline": "none",
        }
      }
      type="submit"
    >
      <div>
        Buy
      </div>
    </button>
  </form>
</div>
`;

exports[`(1) Selling render 1`] = `
<div
  className="p-2 border p-3 rounded"
>
  <div
    className="flex justify-between items-center "
  >
    <h3
      className="mb-0"
    >
      Sell
       HIVE
    </h3>
    <div>
      <small
        className="flex cursor-pointer"
        onClick={[Function]}
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Available
          :
        </div>
        <div>
          dummy value
        </div>
      </small>
      <small
        className="flex"
      >
        <div
          className="mr-1 text-blue-dark-sky"
        >
          Highest bid
          :
        </div>
        <div
          className="pointer"
          onClick={[Function]}
        >
          9.000
        </div>
      </small>
    </div>
  </div>
  <hr />
  <form
    className="block "
    onSubmit={[Function]}
  >
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Price
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value="6.900000"
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HBD/HIVE
        </div>
      </div>
    </div>
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Amount
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value={0}
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HIVE
        </div>
      </div>
    </div>
    <div
      className="mb-4"
    >
      <label
        className=""
      >
        Total
      </label>
      <div
        className="ecency-input-group flex items-stretch w-full [&>input]:rounded-[0] [&>input:first-child]:rounded-l-full [&>input:last-child]:rounded-r-full [&>.ecency-input-group-part>button]:rounded-tl-none [&>.ecency-input-group-part>button]:rounded-bl-none [&>.ecency-input-group-part>button]:h-[2.75rem]"
      >
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          onChange={[Function]}
          placeholder="0.0"
          type="text"
          value={0}
        />
        <div
          className="ecency-input-group-part ecency-input-group-append border-l-0 rounded-tr-full rounded-br-full bg-gray-200 dark:bg-gray-600 dark:border-gray-600 flex items-center justify-center px-2.5 border-2"
          onClick={[Function]}
        >
          HBD
        </div>
      </div>
    </div>
    <button
      className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 block"
      disabled={true}
      style={
        Object {
          "outline": "none",
        }
      }
      type="submit"
    >
      <div>
        Sell
      </div>
    </button>
  </form>
</div>
`;
